# Graph-rag-bench

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml
benchmark_datasets/: loader.py  obsidian_loader.py
data/: questions.json
doc/: notes.md
eval/: evaluate.py
hipporag_rag/: ingest.py  query.py  setup.py
lightrag_rag/: ingest.py  query.py  setup.py
scripts/: evaluate.py  ingest_hipporag.py  ingest_lightrag.py  prepare_dataset.py  query_hipporag.py  query_lightrag.py  visualize_hipporag.py
