[project]
name = "graph-rag-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=4.8.5",
    "deepeval>=3.0.0",
    "lightrag-hku>=1.4.0",
    "hipporag>=2.0.0a4",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.0.0",
    "neo4j>=5.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "tqdm>=4.0.0",
    "pyvis>=0.3.2",
    "pgvector>=0.4.2",
]

[tool.uv.sources]
hipporag = { git = "https://github.com/OSU-NLP-Group/HippoRAG.git" }

[tool.uv]
# hipporag 2.0.0a4 pins openai==1.91.1 which doesn't exist (openai jumped to 2.x).
# Override to any compatible version so resolution succeeds.
override-dependencies = [
    "openai>=1.0.0",
]
